# OPENARM_teleop

./: .gitignore  Plan.md  README.md  can_arm_id_test.py
openarm/: .gitattributes  README.md  dprint.json  enactic.md  lefthook.yaml  motor-testing.md  pyproject.toml
openarm/.github/: dependabot.yaml
openarm/.github/workflows/: ci.yaml
openarm/examples/: README.md  __init__.py
openarm/openarm/: __init__.py
openarm/openarm/bus/: __init__.py
openarm/openarm/damiao/: README.md  __init__.py  __main__.py  arm.py  arm_motor_check.py  config.py  configure.py  detect.py  encoding.py  gravity.py  monitor.py  motor.py  register_dump.py  set_zero.py  set_zero_limit.py
openarm/openarm/kinematics/: README.md  __init__.py
openarm/openarm/netcan/: __init__.py  __main__.py  client.py  server.py  transport.py
openarm/openarm/simulation/: README.md  __init__.py
openarm/openarm/utils/: __init__.py  display.py
openarm/scripts/: setup_can.sh
openarm/tests/: __init__.py
openarm/tests/kinematics/: __init__.py
openarm/urdf/: openarm_bimanual.urdf
openarm_module/: .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  ruff.toml  setup_system.sh
openarm_module/.github/workflows/: docker.yml  pre-commit.yml
openarm_module/config/curobo/: openarm_left.yml  openarm_right.yml
openarm_module/scripts/: move_to_zero.py  sync_calibration.py
openarm_module/scripts/isaacsim/: README.md  launch_alvr.sh  (+5 more)
openarm_module/src/: openarm_rest_node.py
openarm_module/tests/: RUN_DEMO.md  deploy_policy.py  openarm_jacobian_ik.py  openarm_wave_demo.py  test_openarm_ik.py
(+102 files in other folders)
