[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm"
version = "0.1.0"
description = "A Python package for robotic arm control and automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-can>=4.6.1",
  "ikpy>=3.4.2",
  "mujoco>=3.3.7",
]

[project.scripts]
damiao = "openarm.damiao.__main__:_main"
damiao-set-zero-limit = "openarm.damiao.set_zero_limit:run"
damiao-register-dump = "openarm.damiao.register_dump:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["openarm*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "PLR0913", "PLR0915", "ERA001", "S101"]
